yaml/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-ingress
spec:
  controller: nginx.org/ingress-controller
