yaml/artifactory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artifactory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artifactory
  template:
    metadata:
      labels:
        app: artifactory
    spec:
      containers:
        - name: artifactory
          image: docker.bintray.io/jfrog/artifactory-pro:latest
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: artifactory-data
              mountPath: /var/opt/jfrog/artifactory
      volumes:
        - name: artifactory-data
          emptyDir: {}
      nodeSelector:
          kubernetes.io/hostname: infra2

---
apiVersion: v1
kind: Service
metadata:
  name: artifactory-service
spec:
  selector:
    app: artifactory
  ports:
    - name: http
      port: 8081
      targetPort: 8081
