yaml/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mongo-ui
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: mongoui.com
      http:
        paths: 
            backend:
              serviceName: mongo-express-service
              servicePort: 8081
